# rust-dev

small-project-for-learnings/: .gitignore
small-project-for-learnings/actix-web_and_rhai/: Cargo.toml
small-project-for-learnings/actix-web_and_rhai/src/: add.rhai  main.rs  multiply.rhai
small-project-for-learnings/api-call/: Cargo.toml
small-project-for-learnings/api-call/src/: main.rs
small-project-for-learnings/async-await/: Cargo.toml
small-project-for-learnings/async-await/src/: main.rs
small-project-for-learnings/download-images/: Cargo.toml
small-project-for-learnings/download-images/src/: main.rs
small-project-for-learnings/extract-links/: Cargo.toml
small-project-for-learnings/extract-links/src/: main.rs
small-project-for-learnings/get-request/: Cargo.toml
small-project-for-learnings/get-request/examples/: 1_without_error_chain.rs
small-project-for-learnings/get-request/src/: main.rs
small-project-for-learnings/mongodb-warp/: Cargo.toml  workflow
small-project-for-learnings/mongodb-warp/src/: main.rs
small-project-for-learnings/notes-mcp-server/: Cargo.toml  README.md
small-project-for-learnings/notes-mcp-server/src/: main.rs
small-project-for-learnings/rust-crud-firebase/: Cargo.toml
small-project-for-learnings/rust-crud-firebase/src/: main.rs
small-project-for-learnings/very-basic-auth/: Cargo.toml
small-project-for-learnings/very-basic-auth/src/: main.rs
