[package]
name = "notes-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# "server" = server-side protocol + tool system, "macros" is on by default
# (gives us #[tool] / #[tool_router]), "transport-io" = stdio transport.
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
